<resources>
    <string name="app_name">AbsoluteCinemaApp</string>
    <string name="login">Login</string>
    <string name="access_to_purchased_tickets">Access to purchased tickets</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_btn">Continue</string>
    <string name="nur_sultan">Nur-Sultan</string>
    <string name="eng">Eng</string>
    <string name="log_in">Log in</string>
    <string name="now_in_cinemas">Now in Cinemas</string>
    <string name="spider_man_no_way_home">Spider-Man: No Way Home</string>
    <string name="action">Action</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_category">Movie Category</string>
    <string name="movie_release_date">Movie Release Date</string>
    <string name="rating_right">8.1</string>
    <string name="rating_left">7.9</string>
    <string name="enter_the_password_from_the_sms">Enter the password from the SMS</string>
    <string name="change_number">Change number</string>
    <string name="resend_0_59">Resend (0:59)</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="the_batman">The Batman</string>
    <string name="_8_3">8.3</string>
    <string name="imbd">IMBD</string>
    <string name="_7_9">7.9</string>
    <string name="kinopoisk">Kinopoisk</string>
    <string name="movie_description">When the Riddler, a sadistic serial killer, begins murdering key political figures in Gotham, Batman is forced to investigate the city\'s hidden corruption and question his family\'s involvement.</string>
    <string name="certificate">Certificate</string>
    <string name="runtime">Runtime</string>
    <string name="release">Release</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="cast">Cast</string>
    <string name="_16">16+</string>
    <string name="_02_56">02:56</string>
    <string name="_2022">2022</string>
    <string name="action_crime_drama">Action, Crime, Drama</string>
    <string name="matt_reeves">Matt Reeves</string>
    <string name="cast_names">Robert Pattinson, Zoë Kravitz, Jeffrey Wright, Colin Farrell, Paul Dano, John Turturro, Andy Serkis, Peter Sarsgaard</string>
    <string name="select_session">Select Session</string>
    <string name="april_18">April, 18</string>
    <string name="by_cinema">By cinema</string>
    <string name="time">Time</string>
    <string name="resend_in_seconds">Resend in %d seconds</string>
    <string name="resend">Resend</string>
    <string name="profile">Profile</string>
    <string name="add_card">Add Card</string>
    <string name="apply">Apply</string>
    <string name="italian">Italian</string>
    <string name="pay_for_tickets">Pay for Tickets</string>
    <string name="cinema">Cinema</string>
    <string name="date">Date</string>
    <string name="hall">Hall</string>
    <string name="seats">Seats</string>
    <string name="petrova_st_24_eurasia_shopping_center">Petrova St., 24, Eurasia Shopping Center</string>
    <string name="_6_april_2022_14_40">6 April 2022, 14:40</string>
    <string name="eurasia_cinema_7">Eurasia Cinema 7</string>
    <string name="_6th">6th</string>
    <string name="_7_row_7_8">7 row (7, 8)</string>
    <string name="_2200">2200 ₸</string>
    <string name="_1000">1000 ₸</string>
    <string name="_3200">3200 ₸</string>
    <string name="_44_20_3190_8978">+44 20 3190 8978</string>
    <string name="saved_cards">Saved cards</string>
    <string name="add_new_card">Add new card</string>
    <string name="payments_history">Payments history</string>
    <string name="you_haven_t_bought_tickets_yet">You haven\'t bought tickets yet</string>
    <string name="eurasia_cinema">Eurasia Cinema</string>
    <string name="available">Available</string>
    <string name="occupied">Occupied</string>
    <string name="chosen">Chosen</string>
    <string name="screen">SCREEN</string>
    <string name="buy_2_tickets_3200">Buy 2 tickets • 3200 ₸</string>
    <string name="adult">Adult</string>
    <string name="_1500">1500 ₸</string>
    <string name="deselect_this_seat">Deselect this seat</string>
    <string name="child">Child</string>
    <string name="student">Student</string>
    <string name="vip">VIP</string>
    <string name="sort_by">Sort by</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="your_ticket">Your Ticket</string>
    <string name="show_this_code_to_the_gatekeeper_at_the_cinema">Show this code to the gatekeeper at the cinema</string>
    <string name="cost">Cost</string>
    <string name="_3200_paid">3200 ₸ (paid)</string>
    <string name="refund">Refund</string>
    <string name="send">Send</string>
    <string name="_44_8978">44 •• •••• 8978</string>
    <string name="_06_24">06/24</string>
    <string name="almaty">Almaty</string>
    <string name="_14_40">14:40</string>
    <string name="pyc">Pyc</string>
    <string name="_5500">5500 ₸</string>
    <string name="card_number">Card number</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvc">CVC</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="sessions">Sessions</string>
    <string name="ticket_date_time">%1$s, %2$s</string>
    <string name="_1_x_adult">1 x Adult</string>
    <string name="_1_x_child">1 x Child</string>
    <string name="_1_x_vip">1 x Vip</string>
    <string name="_1_x_student">1 x Student</string>
    <string name="_2_total">2 Total</string>
    <string name="select_ticket_type">Select ticket type</string>
    <string name="_8th_row_7th_seat">8th row, 7th seat</string>

</resources>