<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.about.AboutMovieFragment">

    <VideoView
        android:id="@+id/movie_trailer_tv"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/movie_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/pt_root_ui_regular"
        android:text="@string/movie_description"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/movie_certificate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_root_ui_regular"
            android:text="@string/certificate"
            android:textColor="@color/light_grey"
            android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_runtime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:text="@string/runtime"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_release_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:text="@string/release"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_genre_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:text="@string/genre"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_director_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:text="@string/director"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_cast_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:text="@string/cast"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_rating_age_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rating_age_shape"
                android:fontFamily="@font/pt_root_ui_regular"
                android:text="@string/_16"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_runtime_length_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:text="@string/_02_56"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_release_year_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:text="@string/_2022"
                android:textColor="@color/white"
                android:textSize="14sp" />

        <TextView
            android:id="@+id/movie_genre_context_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/pt_root_ui_regular"
            android:text="@string/action_crime_drama"
            android:textColor="@color/white"
            android:textSize="14sp" />



        <TextView
            android:id="@+id/movie_director_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/pt_root_ui_regular"
            android:text="@string/matt_reeves"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/movie_cast_names_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/pt_root_ui_regular"
            android:text="@string/cast_names"
            android:textColor="@color/white"
            android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_session_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/orange"
            android:text="@string/select_session"
            app:cornerRadius="8dp" />
    </LinearLayout>
</LinearLayout>
