<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/access_pw_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/enter_the_password_from_the_sms"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_pin_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/pin_insert_shape"
                    android:hint="@string/_6"
                    android:inputType="number"
                    android:maxLength="1"
                    android:minHeight="60dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textColorHint="@color/white" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/second_pin_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/pin_insert_shape"
                    android:hint="@string/_7"
                    android:inputType="number"
                    android:maxLength="1"
                    android:minHeight="60dp"
                    android:gravity="center"
                    android:textColorHint="@color/white"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/third_pin_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/pin_insert_shape"
                    android:hint="@string/_8"
                    android:inputType="number"
                    android:maxLength="1"
                    android:minHeight="60dp"
                    android:gravity="center"
                    android:textColorHint="@color/white" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fourth_pin_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/pin_insert_shape"
                    android:hint="@string/_9"
                    android:inputType="number"
                    android:maxLength="1"
                    android:minHeight="60dp"
                    android:gravity="center"
                    android:textColorHint="@color/white" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/orange"
                android:paddingTop="10dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="8dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/change_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/change_number"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resend_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/pt_root_ui_regular"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/resend_0_59"
                android:textColor="@color/light_grey"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>